test/spec_vectors/simd_i32x4_extmul_i16x8/fail/module_12.wat
(module (func $i32x4.extmul_high_i16x8_u-arg-empty (result v128) (i32x4.extmul_high_i16x8_u)))